-- What's new for ??? ()

New aliases

* dhr and w3r, from Glenn Carr and Will Dean

New Searches

* cheapcd - Buy Cheap CDs Online at Wholesale Cost, $5 under Retail (from Steven J. Heil)
* md5 - calculate an md-5 digest for a string
* tgn - Search the Getty Thesaurus of Geographical Names (from Tim Aiello)
* arin - Search the Arin Whois database at www.arin.net/whois (from Tim Aiello)

Modified Searches

* 

Enhancements

* 

Bug Fixes

* Fix for tooltips problem on scrolling menus (bug 617639)  (DQSDTools.DLL changes, version.js NOT changed to force upgrade)


-- What's new for 3.1.4 (October 3, 2002)

New Searches

* smlnk - smLNK is a link-shortening redirector where the URLs are as short as possible (from Jonathon Marshall)
* cjfr - Get the conjugation for a french verb
* synfr - get synonyms for a french word
* webpoll - displays a graph illustrating the timings of the objects on a web page (from Dean Wilson)
* dg - GoDaddy DynaGen Domain Search; finds intelligent variations of domain names given a word (from Glenn Carr)
* mysimon - MySimon price comparison engine
* dhl - Track DHL packages
* usps - Track USPS packages
* abex - Track Airborne Express packages
* wpfr - Get an address from a name in France
* msda - Microsoft Discussion Archive search
* shack - Search the shacknews.com comments database (from Wolfgang Deutsch)
* dps - Search for the best DVD prices from several online merchants (from Steven J. Heil)
* pgrab - Price searches, product info, vendor ratings & reviews. (from Andrew D. Myers)
* httpd - Netcraft's "Whats that site running" database/web server information
* archi - Archive.org's Way Back Machine.
* videoeta - Search the videoeta.com site for video release information
* npdr - Search www.nursespdr.com database for drug information.(from John W. Bairen, Jr.)

Modified Searches

* setiq - yet another cosmetic change (use of <div> rather than <a>)
* yg - Added /number switch for jumping directly to a message number in the archive